_sass/index.scss
.announcements {
  margin: 0;
  text-align: center;

  .alert {
    border: 0;
    border-radius: 0;
    margin: 0;
  }
}

.navbar {
  margin: 0;
  border: 0;
  background: transparent;
}

header {
  width: 100%;
  height: 100vh;

  background: url($base-url + "/images/background.jpg") no-repeat left center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;

  .header {
    position: absolute;
    top: 50%;
    text-align: center;

    width: 100%;

    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
  }

  .header-inner {
    margin: auto;
  }

  .icon-logo {
    font-size: 210px;

    @media (max-width: 780px) {
      font-size: 160px;
    }
    
    @media (max-width: 580px) {
      font-size: 100px;
    }
  }

  h1, h2, .icon-logo {
    color: white;
    text-shadow: 2px 2px 7px darken($main-color, 20%);
  }

  h1 {
    font-weight: 400;
    font-size: 76px;
    

    @media (max-width: 780px) {
      font-size: 56px;
    }
    
    @media (max-width: 580px) {
      font-size: 36px;
    }
  }

  h2 {
    color: #ddd;
    font-weight: 300;
    font-size: 34px;

    @media (max-width: 780px) {
      font-size: 24px;
    }
    
    @media (max-width: 580px) {
      font-size: 18px;
    }
  }

  .btn {
    margin-top: 60px;
    border: 2px solid white;
    font-size: 20px;
    background: transparent;
    color: white;

    &:hover {
      color: white;
    }
  }
  
  .navbar-toggle.collapsed {
      display: none;
  }
}

